force-app/main/default/objects/Trivia_Answer__c/Trivia_Answer__c.object-meta.xml
<CustomObject>
    <label>Trivia Answer</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Trivia Answers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trivia Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>