force-app/main/default/objects/Trivia_Answer__c/fields/Answers__c.field-meta.xml
<CustomField>
    <fullName>Answers__c</fullName>
    <label>Answers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>