force-app/main/default/objects/Trivia_Answer__c/fields/Chat_GPT_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Chat_GPT_Attempts__c</fullName>
    <label>Chat GPT Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>