force-app/main/default/objects/Trivia_Answer__c/fields/Contestant__c.field-meta.xml
<CustomField>
    <fullName>Contestant__c</fullName>
    <label>Contestant</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>