force-app/main/default/objects/Trivia_Answer__c/fields/Is_Test_Run__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Run__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Test Run</label>
    <type>Checkbox</type>
</CustomField>