force-app/main/default/objects/Trivia_Answer__c/fields/Trivia_Answer_Score__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Answer_Score__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trivia Answer Score</label>
    <referenceTo>Trivia_Answer_Score__c</referenceTo>
    <relationshipLabel>Trivia Answers</relationshipLabel>
    <relationshipName>Trivia_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>