force-app/main/default/objects/Trivia_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Session_Key__c</columns>
    <columns>Contestant__c</columns>
    <columns>Answers__c</columns>
    <columns>Is_Test_Run__c</columns>
    <columns>Score__c</columns>
    <columns>Chat_GPT_Attempts__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>